fixed horizontal overflow bug

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -27,7 +27,7 @@ body {
     font-size: 0.9em;
 }
 .foot {
-    margin-top: 7%;
+    padding-bottom: 10px;
 }
 .foot a {
     text-decoration: none;
